# Letris

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gitignore  letris.rc  scriptsetup2.iss  user_settings.json
.github/workflows/: cmake-multi-platform.yml
AppImage/applications/: letris.desktop
assets/: user_settings.json
include/: AllocError.hpp  Board.hpp  Button.hpp  ButtonManager.hpp  Coop.hpp  CoopOptions.hpp  Error.hpp  Game.hpp  GameOver.hpp  Graphics.hpp  Menu.hpp  Options.hpp  OptionsButton.hpp  Pause.hpp  Screen.hpp  ScreenButton.hpp  ScreenManager.hpp  Settings.hpp  Shape.hpp  SoloOptions.hpp  Stats.hpp  Vec2.hpp  Window.hpp  raylibFunctions.hpp  raylibWrapper.hpp
src/: Board.cpp  Button.cpp  ButtonManager.cpp  Coop.cpp  CoopOptions.cpp  Game.cpp  GameOver.cpp  Menu.cpp  Options.cpp  OptionsButton.cpp  Pause.cpp  Screen.cpp  ScreenButton.cpp  ScreenManager.cpp  Settings.cpp  Shape.cpp  SoloOptions.cpp  Stats.cpp  Window.cpp  main.cpp  raylibFunctions.cpp  raylibWrapper.cpp
